--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,83 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+    .sidebar-container {
+        @apply fixed top-0 left-0 h-screen m-0 pt-3 bg-neutral-900 text-white shadow-lg flex flex-col items-center
+    }
+    .sidebar-wrap {
+        position: relative;
+        margin: 0 0 8px;
+        display: flex;
+        justify-content: center;
+        width: 72px;
+    }
+    .sidebar-icon {
+        @apply flex h-12 w-12 justify-center items-center shadow-lg
+        bg-neutral-800 text-secondary 
+        hover:bg-secondary hover:text-white
+        rounded-3xl hover:rounded-2xl transition-all duration-200 ease-out cursor-pointer;
+    }
+    .sidebar-main-icon {
+        @apply flex h-12 w-12 justify-center items-center shadow-lg
+        bg-neutral-800 text-white 
+        hover:bg-primary
+        rounded-3xl hover:rounded-2xl transition-all duration-200 ease-out cursor-pointer;
+    }
+    .sidebar-img {
+        @apply flex h-12 w-12 justify-center items-center shadow-lg
+        rounded-3xl hover:rounded-2xl transition-all duration-200 ease-out cursor-pointer;
+    }
+    .guildSeparator {
+        height: 2px;
+        width: 32px;
+        border-radius: 1px;
+        background-color: rgb(38, 38, 38);
+    }
+    
+    .pill-2RsI5Q {
+        position: absolute;
+        left: 0;
+        top: 0;
+    }
+    
+    .wrapper-z5ab_q {
+        position: relative;
+        overflow: hidden;
+        width: 8px;
+        height: 48px;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        -webkit-box-pack: start;
+        -ms-flex-pack: start;
+        justify-content: flex-start;
+        contain: layout size;
+    }
+    .item-2LIpTv {
+        position: absolute;
+        display: block;
+        width: 8px;
+        border-radius: 0 4px 4px 0;
+        margin-left: -4px;
+        background-color: #fff;
+    
+        opacity: 1; height: 40px; transform: none;
+    }
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
+    background-color: rgb(36, 36, 36);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+img {
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
+    user-select: none;
+  }
